# scailar-voice-pg

./: .gitignore  .isort.cfg  Dockerfile  README.md  audio_buffer_example.py  docker-compose.yaml  empty_log_config.json  inbound_main.py  inbound_voice_main.py  main.py  microphone_test.py  numbers.txt  outbound_live_main.py  outbound_main.py  poetry.toml  pyproject.toml
